# Small

./: .gitignore  DigiModuleMap.cc  Fiducial_Recognition.ipynb  Imagination.ipynb  LICENSE  LowROCOccupancies.cc  LumiblockTab.cc  OccTab.h  PixelTabChargeDistribution.h  README.md  ROCEffTab.h  SaveSelectionWindow.cc  Solitaire.ipynb  TGCommandFrame.cc  TabSelectionWindow.cc  TriggerTab.cc  anaPixelTree.h  configure  kShortTab.h  oven_control.ino  oven_control.py  pattern.txt  pattern_gen.py
Assembler/: source.s
Beer_Classifier/: .gitignore  main.py  requirements.txt
Duffing_Oscillator/: integrator.pyx  project.py  setup.py
Flashy/: GERM101.flashy  GERM102.flashy  README.md  flashy.py  scrapewords.py
Gantry_Vision/: focus.cpp  gVision.hpp
Gantry_Vision/cpp/: CMakeLists.txt  fiducials.cpp  gVision.cpp
HHC/: .gitignore  db.py  healthcare_cms_pull.py  json_list_parser.py  models.py  pull_stat  utils.py
IPythonNotebooks/: Fiducial_Recognition.ipynb  Imagination.ipynb  Potting Data Analysis - New Routine.ipynb  PottingLog2JSON.py  (+8 more)
ProjectEuler_Haskell/: .gitignore  ChangeLog.md  LICENSE  Makefile  ProjectEuler-Haskell.cabal  cabal.sandbox.config  stack.yaml
ProjectEuler_Haskell/001/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/002/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/003/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/004/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/005/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/006/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/007/: sol  sol.hi  sol.hs
ProjectEuler_Haskell/015/: sol.hs
ProjectEuler_Haskell/cpp_src/: Sol031.cpp
ProjectEuler_Haskell/src/: Main.hs  Sol001.hs  Sol002.hs  Sol003.hs  Sol004.hs  Sol005.hs  Sol006.hs  Sol007.hs  Sol015.hs  Sol017.hs  Sol018.hs  Sol020.hs  Sol021.hs  Sol022.hs  Sol023.hs  Sol025.hs  Sol026.hs  Sol027.hs  Sol028.hs  Sol029.hs  Sol030.hs  Sol031.hs  Sol032.hs  Sol033.hs  Sol034.hs  Sol035.hs  Sol036.hs  Sol037.hs  Sol038.hs  Sol039.hs  Sol040.hs  Sol041.hs  Sol042.hs  Sol043.hs  Sol067.hs  Sol078.hs  Util.hs
(+447 files in other folders)
